# lithos

./: .gitignore  CLAUDE.md  Cargo.toml  FINDINGS-cycle28.md  FINDINGS-e2e-r2.md  FINDINGS-e2e.md  FINDINGS.md  Makefile  README.md  TODO.md  deny.toml  frob.toml  pyproject.toml  tickets.md
apps/graphite/: README.md  pyproject.toml
apps/graphite/graphite/: __init__.py  artifacts.py  cli.py  logging_setup.py  server.py  tui_app.py  viewer.html
apps/graphite/tests/: test_artifacts.py  test_import_boundary.py  test_server.py  test_tui.py
crates/regolith-api/: Cargo.toml
crates/regolith-api/src/: docextract.rs  lib.rs  net_core.rs  rules.rs  session.rs
crates/regolith-api/tests/: integration.rs
crates/regolith-diag/: Cargo.toml
crates/regolith-diag/src/: code.rs  diagnostic.rs  explain.rs  lib.rs  lints.rs  render.rs  sink.rs  span.rs
crates/regolith-diag/tests/: integration.rs
crates/regolith-ir/: Cargo.toml
crates/regolith-ir/src/: block_requirement.rs  budget.rs  conformance.rs  feature_program.rs  ledger.rs  lib.rs  nodes.rs  sketch.rs  system.rs  test_decl.rs
crates/regolith-ir/src/snapshots/: regolith_ir__sketch__promotion_tests__corpus_walk_promotions.snap
crates/regolith-ir/src/solve/: mod.rs  sketch.rs  statics.rs  stiffness.rs
crates/regolith-ir/tests/: integration.rs
crates/regolith-lower/: Cargo.toml
crates/regolith-lower/src/: block_requirement.rs  board_entities.rs  calcite.rs  checks.rs  claim_scope.rs  claims.rs  contracts.rs  converter.rs  discharge.rs  entities.rs  extract.rs  feature_program.rs  flownet_lower.rs  fluid.rs  frame_lower.rs  harness_lower.rs  lib.rs  lints.rs  output.rs  ownership.rs  power.rs  query.rs  realized_input.rs  registry.rs  removal.rs  rule_engine.rs  rules.rs  solve_pass.rs  test_decl_lower.rs  waivers.rs
crates/regolith-lower/src/claims/: common.rs  comparison.rs  compute.rs  conformance.rs  cost.rs  fluid.rs  frame.rs  mod.rs  plan.rs  require.rs  rule.rs  sim.rs  tests.rs
crates/regolith-lower/tests/: integration.rs
crates/regolith-ls/: Cargo.toml
crates/regolith-ls/src/: actions.rs  artifacts.rs  completion.rs  diagnostics.rs  folding.rs  formatting.rs  hover.rs  lib.rs  main.rs  nav.rs  position.rs  semtok.rs  server.rs  symbols.rs  workspace.rs
crates/regolith-ls/tests/: integration.rs
crates/regolith-oblig/: Cargo.toml
crates/regolith-oblig/src/: assembly.rs  attestation.rs  claim.rs  contract_graph.rs  cost.rs  drawing.rs  encoding.rs  evidence.rs  field.rs  flownet.rs  frame.rs  geometry.rs  harness.rs  layout.rs  lib.rs  obligation.rs  optimize.rs  payload.rs  power.rs  signature.rs  solver.rs  waiver.rs
crates/regolith-oblig/tests/: integration.rs
crates/regolith-py/: Cargo.toml
crates/regolith-py/src/: lib.rs
crates/regolith-qty/: Cargo.toml
crates/regolith-qty/src/: corner.rs  count.rs  decl.rs  dimension.rs  interval.rs  lib.rs  log.rs  monomorphize.rs  quantity.rs  range.rs  resolution.rs  unit.rs  value_source.rs  window.rs
crates/regolith-qty/tests/: integration.rs
crates/regolith-sem/: Cargo.toml
crates/regolith-sem/src/: converter.rs  entity.rs  lib.rs  net_core.rs  ownership.rs  profile.rs  query.rs  resolve.rs  stage.rs  symmetry.rs
crates/regolith-sem/tests/: integration.rs
crates/regolith-syntax/: Cargo.toml
crates/regolith-syntax/benches/: parse.rs
crates/regolith-syntax/src/: ast.rs  checks.rs  cst.rs  debug.rs  extension.rs  formatter.rs  layout.rs  lib.rs  parser.rs  syntax_kind.rs  token.rs  walk.rs
crates/regolith-syntax/tests/: integration.rs  snapshots.rs
crates/regolith-syntax/tests/fixtures/: process_pack.cupr  process_pack.hem
crates/regolith-syntax/tests/snapshots/: snapshots__ast@crates_regolith-syntax_tests_fixtures_process_pack_cupr.snap  snapshots__ast@crates_regolith-syntax_tests_fixtures_process_pack_hem.snap  snapshots__ast@examples_cubesat_kestrel_cupr.snap  snapshots__ast@examples_flagships_cubesat_kestrel_cupr.snap  snapshots__ast@examples_mech_gear_reducer_hem.snap  snapshots__ast@examples_systems_cubesat_kestrel_cupr.snap  snapshots__ast@examples_tracks_cuprite_buck_converter_cupr.snap  snapshots__ast@examples_tracks_hematite_gear_reducer_hema.snap  snapshots__cst@crates_regolith-syntax_tests_fixtures_process_pack_cupr.snap  snapshots__cst@crates_regolith-syntax_tests_fixtures_process_pack_hem.snap  snapshots__cst@examples_cubesat_kestrel_cupr.snap  snapshots__cst@examples_flagships_cubesat_kestrel_cupr.snap  snapshots__cst@examples_mech_gear_reducer_hem.snap  snapshots__cst@examples_systems_cubesat_kestrel_cupr.snap  snapshots__diagnostics_broken.snap  (+15 more)
crates/rockhead-api/: Cargo.toml
crates/rockhead-api/src/: lib.rs  session.rs
crates/rockhead-diag/: Cargo.toml
crates/rockhead-diag/src/: code.rs  lib.rs  render.rs  sink.rs
crates/rockhead-ir/: Cargo.toml
crates/rockhead-ir/src/: budget.rs  conformance.rs  ledger.rs  lib.rs  nodes.rs
crates/rockhead-lower/: Cargo.toml
crates/rockhead-lower/src/: checks.rs  claims.rs  contracts.rs  discharge.rs  entities.rs  lib.rs  output.rs
crates/rockhead-oblig/: Cargo.toml
crates/rockhead-oblig/src/: claim.rs  encoding.rs  evidence.rs  lib.rs  obligation.rs  signature.rs  waiver.rs
crates/rockhead-py/: Cargo.toml
crates/rockhead-py/src/: lib.rs
crates/rockhead-qty/: Cargo.toml
crates/rockhead-qty/src/: corner.rs  decl.rs  dimension.rs  interval.rs  lib.rs  monomorphize.rs  quantity.rs  range.rs  resolution.rs  unit.rs
crates/rockhead-sem/: Cargo.toml
crates/rockhead-sem/src/: entity.rs  lib.rs  ownership.rs  profile.rs  query.rs  resolve.rs  stage.rs  symmetry.rs
crates/rockhead-syntax/: Cargo.toml
crates/rockhead-syntax/benches/: parse.rs
crates/rockhead-syntax/src/: ast.rs  checks.rs  cst.rs  debug.rs  extension.rs  formatter.rs  layout.rs  lib.rs  parser.rs  syntax_kind.rs  token.rs  walk.rs
crates/rockhead-syntax/tests/: snapshots.rs
crates/rockhead-util/: Cargo.toml
crates/rockhead-util/src/: canon.rs  lib.rs
docs/: index.md  (+1 more)
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_cbor_decode.rs  fuzz_lexer.rs  fuzz_parser.rs
(+1978 files in other folders)
