[workspace]
members = ["crates/*"]
resolver = "2"

# Single source of truth for version + shared metadata across the core
# crates (AD-2): no version skew between core and wrapper is representable.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.90"
repository = "https://example.invalid/regolith"

# Blessed dependency set (WO-01 / AD-15). Every dep here is boring,
# maintained, and pure-Rust so the toolchain stays trivially
# cross-platform (AD-12). Crates pin these by `workspace = true`.
[workspace.dependencies]
# core libraries
logos = "0.14"
rowan = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["indexmap2"] }
blake3 = "1"
ciborium = "0.2"
rayon = "1"
thiserror = "1"
tracing = "0.1"
indexmap = { version = "2", features = ["serde"] }
camino = { version = "1", features = ["serde1"] }
num-rational = { version = "0.4", features = ["serde"] }
annotate-snippets = "0.11"
ryu = "1"
# L2 numeric solves (WO-23): dense linear algebra, scoped to
# `regolith-ir`'s `solve` feature only (AD-1: deterministic compiler
# work, not harness physics).
faer = { version = "0.24", default-features = false, features = ["std", "linalg"] }
# ffi
pyo3 = { version = "0.22", features = ["abi3-py312", "extension-module"] }
pyo3-log = "0.11"
# dev
insta = "1"
proptest = "1"
criterion = "0.5"

# Workspace-wide lints (AD-1 ground rules): pedantic clippy, warnings
# are errors. Individual crates may relax a specific lint with a
# documented reason.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Prose in doc comments names real acronyms/types (PyO3, CST, CBOR,
# IndexMap...); backticking English is noise, not clarity.
doc_markdown = "allow"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[profile.profiling]
inherits = "release"
debug = true
