[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
# The shared toolchain wheel. Umbrella name: rockhead (the miner);
# languages hematite (mechanical) + cuprite (electrical); quarry the
# package tool, lodestone the registry -- one geology theme.
name = "rockhead"
version = "0.1.0"
description = "The rockhead engineering toolchain (hematite + cuprite) -- compiler core and orchestrator"
requires-python = ">=3.12"
license = { text = "MIT OR Apache-2.0" }
dependencies = [
    "pydantic>=2",
    "typani",
    "python-dotenv",
    "typer",
    "httpx",
    # Content-addressed archives + record pinning (quarry/lodestone,
    # substrate/11 sec. 10, INV-22): blake3 matches the Rust core's hasher.
    "blake3>=1",
    # Verification-harness model math (AD-1 / roadmap Phase C-D names these
    # explicitly): closed-form + numeric physics models.
    "numpy>=2",
    "scipy>=1.11",
]

[project.scripts]
rockhead = "rockhead.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "coverage",
    "datamodel-code-generator",
    "maturin>=1.7,<2",
]

[tool.maturin]
# Mixed Rust/Python layout (AD-2): pure-Python sources live under
# python/, the compiled extension is rockhead._core built from rockhead-py.
manifest-path = "crates/rockhead-py/Cargo.toml"
python-source = "python"
module-name = "rockhead._core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# typer's argument/option declarations are calls in parameter defaults by
# design; B008 is not meaningful for the CLI layer.
[tool.ruff.lint.per-file-ignores]
"python/rockhead/cli/*.py" = ["B008"]
# Generated from Rust doc comments (AD-5): line length follows the
# source docstrings, not house style; never hand-edited so E501 noise
# has no action to take.
"python/rockhead/_schema/models.py" = ["E501"]

[tool.ty.environment]
python-version = "3.12"
root = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests", "python"]
