[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
# The shared toolchain wheel. Umbrella name: regolith (the miner);
# languages hematite (mechanical) + cuprite (electrical); magnetite the
# package tool (its registry has no separate name) -- one geology theme.
name = "regolith"
version = "0.1.0"
description = "The regolith engineering toolchain (hematite + cuprite) -- compiler core and orchestrator"
requires-python = ">=3.12"
license = { text = "GPL-2.0-only" }
dependencies = [
    "pydantic>=2",
    "typani",
    "python-dotenv",
    "typer",
    "httpx",
    # Content-addressed archives + record pinning (the magnetite registry,
    # regolith/11 sec. 10, INV-22): blake3 matches the Rust core's hasher.
    "blake3>=1",
    # Verification-harness model math (AD-1 / roadmap Phase C-D names these
    # explicitly): closed-form + numeric physics models.
    "numpy>=2",
    "scipy>=1.11",
    "cryptography>=49.0.0",
    # Mech geometry realizer (WO-22, AD-1): OCCT via build123d,
    # exclusively imported from regolith.realizer.mech.interpreter.
    "build123d>=0.11,<1",
]

[project.scripts]
regolith = "regolith.cli:app"

# NOTE (WO-22 cut, recorded in the WO file): the mech realizer pack
# (`regolith.realizer.mech.pack:register`) is deliberately NOT wired
# into `[project.entry-points."regolith.model_packs"]` here. That group
# is the discovery seam for genuinely EXTERNAL third-party packs
# (WO-20/D-B); registering this repo's own in-tree distribution under
# it would make the pack load in EVERY `default_registry()` call
# (including every other WO's harness test), which is wrong before any
# obligation actually routes `geometry_realizable` claims to it (no
# producer exists yet -- see `regolith.realizer.mech.schema`'s module
# docstring). Call `regolith.realizer.mech.pack.register(registry)`
# directly (as the tests do) until a real integration point exists.

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "coverage",
    "datamodel-code-generator",
    "maturin>=1.7,<2",
]

[tool.maturin]
# Mixed Rust/Python layout (AD-2): pure-Python sources live under
# python/, the compiled extension is regolith._core built from regolith-py.
manifest-path = "crates/regolith-py/Cargo.toml"
python-source = "python"
module-name = "regolith._core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# typer's argument/option declarations are calls in parameter defaults by
# design; B008 is not meaningful for the CLI layer.
[tool.ruff.lint.per-file-ignores]
"python/regolith/cli/*.py" = ["B008"]
# Generated from Rust doc comments (AD-5): line length follows the
# source docstrings, not house style; never hand-edited so E501 noise
# has no action to take.
"python/regolith/_schema/models.py" = ["E501"]

[tool.ty.environment]
python-version = "3.12"
root = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests", "python"]
markers = [
    "kicad: real kicad-cli/pcbnew tests (WO-35 deliverable 5); skipped with a named reason when the tools are unavailable",
]
