[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
# The shared toolchain wheel. Umbrella name: regolith (the miner);
# languages hematite (mechanical) + cuprite (electrical); magnetite the
# package tool (its registry has no separate name) -- one geology theme.
name = "regolith"
version = "0.1.0"
description = "The regolith engineering toolchain (hematite + cuprite) -- compiler core and orchestrator"
requires-python = ">=3.12"
license = { text = "GPL-2.0-only" }
dependencies = [
    "pydantic>=2",
    "typani",
    "python-dotenv",
    "typer",
    # cli/app.py imports click directly (typer's own dependency no longer
    # pins it transitively as of typer>=0.26) -- pinned explicitly so a
    # fresh resolution (e.g. apps/graphite's separate lockfile, WO-59)
    # installs it too.
    "click",
    "httpx",
    # Content-addressed archives + record pinning (the magnetite registry,
    # regolith/11 sec. 10, INV-22): blake3 matches the Rust core's hasher.
    "blake3>=1",
    # Verification-harness model math (AD-1 / roadmap Phase C-D names these
    # explicitly): closed-form + numeric physics models.
    "numpy>=2",
    "scipy>=1.11",
    "cryptography>=49.0.0",
    # `regolith.config` (WO-59 D164): the global config-file location
    # follows platform conventions (XDG on Linux, etc).
    "platformdirs>=4",
    # Mech geometry realizer (WO-22, AD-1): OCCT via build123d,
    # exclusively imported from regolith.realizer.mech.interpreter.
    "build123d>=0.11,<1",
    # `regolith check --watch` (WO-40 deliverable 5).
    "watchfiles>=0.21",
]

[project.scripts]
regolith = "regolith.cli:app"
# Short alias (owner: "regolith" and "regolith magnetite <verb>" are too
# long to type). Same console entry point, same app object -- no logic
# difference, purely a shorter binary name.
reg = "regolith.cli:app"

# NOTE (WO-22 cut, recorded in the WO file): the mech realizer pack
# (`regolith.realizer.mech.pack:register`) is deliberately NOT wired
# into `[project.entry-points."regolith.plugins"]` here (WO-44/AD-26
# generalized the old `regolith.model_packs` group into this one). That
# group is the discovery seam for genuinely EXTERNAL third-party packs
# (WO-20/D-B); registering this repo's own in-tree distribution under
# it would make the pack load in EVERY `default_registry()` call
# (including every other WO's harness test), which is wrong before any
# obligation actually routes `geometry_realizable` claims to it (no
# producer exists yet -- see `regolith.realizer.mech.schema`'s module
# docstring). Call `regolith.realizer.mech.pack.register(registry)`
# directly (as the tests do) until a real integration point exists.

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "coverage",
    "datamodel-code-generator",
    "maturin>=1.7,<2",
]

[tool.maturin]
# Mixed Rust/Python layout (AD-2): pure-Python sources live under
# python/, the compiled extension is regolith._core built from regolith-py.
manifest-path = "crates/regolith-py/Cargo.toml"
python-source = "python"
module-name = "regolith._core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# typer's argument/option declarations are calls in parameter defaults by
# design; B008 is not meaningful for the CLI layer.
[tool.ruff.lint.per-file-ignores]
"python/regolith/backends/artifact_index.py" = ["E501"]
"python/regolith/realizer/elec/perfboard.py" = ["E501"]
"tests/backends/test_capabilities.py" = ["E501"]
"tools/health/promotion_tickets.py" = ["E501"]
"tests/realizer/mech/test_die_set.py" = ["E501"]
"tests/magnetite/test_waveform.py" = ["E501"]
"tests/tools/test_materials_metallurgy.py" = ["E501"]
"tests/realizer/mech/test_wire_edm.py" = ["E501"]
"tests/realizer/elec/test_board_assignment.py" = ["E501"]
"tests/orchestrator/test_translate_power.py" = ["E501"]
"tests/harness/test_material_state.py" = ["E501"]
"demos/demo20_fluid_demo.py" = ["E501"]
"demos/demo6_fleet_showcase.py" = ["E501"]
"demos/demo7_drawings_multiview.py" = ["E501"]
"demos/demo8_bom_cost_schedule.py" = ["E501"]
"python/regolith/backends/calc.py" = ["E501"]
"python/regolith/backends/harness_pack.py" = ["E501"]
"python/regolith/harness/models/dfm/*.py" = ["E501"]
"tests/golden/test_negative_corpus.py" = ["E501"]
"tests/test_flagship_factory_p1.py" = ["E501"]
"tests/backends/test_calc.py" = ["E501"]
"tests/backends/test_harness_pack.py" = ["E501"]
"python/regolith/cli/*.py" = ["B008"]
# Generated from Rust doc comments (AD-5): line length follows the
# source docstrings, not house style; never hand-edited so E501 noise
# has no action to take.
"python/regolith/_schema/models.py" = ["E501"]
# GENERATED by `make codes` (D247/WO-131): single-sourced from Rust
# explain content, same posture as `_schema/models.py` above.
"python/regolith/_codes/__init__.py" = ["E501"]
# An inlined WebGL/CSS viewer template (WO-100, AD-31 self-contained
# posture): the embedded JS lines follow JS readability, not Python's
# 88-col rule, and are never hand-wrapped mid-statement.
"python/regolith/backends/three_d/viewer.py" = ["E501"]
# frob:doc/frob:tests directive comments carry a full `path.py::Symbol`
# reference plus attrs on ONE physical line by construction (the DSL has
# no line-continuation form, and appending a trailing `# noqa` breaks
# frob's own attribute parser -- `leftover` after stripping `key="val"`
# must be empty). A long realizer/backends/magnetite module or nested
# class.method path routinely exceeds 88 cols on that single directive
# line; the code lines around it still follow house style.
"python/regolith/realizer/elec/kicad.py" = ["E501"]
"tests/backends/test_artifact_index.py" = ["E501"]
"tests/backends/test_debug_emission.py" = ["E501"]
"tests/backends/test_drawings.py" = ["E501"]
"tests/backends/test_elec_fabset.py" = ["E501"]
"tests/backends/test_manifest.py" = ["E501"]
"tests/backends/test_wo100_projection_and_3d.py" = ["E501"]
"tests/backends/test_wo99_registries.py" = ["E501"]
"tests/magnetite/test_registry.py" = ["E501"]
"tests/magnetite/test_stdlib.py" = ["E501"]
"tests/magnetite/test_stdlib_resolve.py" = ["E501"]
"tests/realizer/elec/test_kicad_real.py" = ["E501"]
"tests/realizer/firmware/test_realize.py" = ["E501"]
"tests/realizer/mech/test_removal_ops.py" = ["E501"]
"tests/realizer/test_wo_frob_coverage.py" = ["E501"]
"tests/magnetite/test_wo_frob_coverage.py" = ["E501"]
"tests/backends/test_wo_frob_coverage.py" = ["E501"]

[tool.ty.environment]
python-version = "3.12"
# "python": the regolith package proper (make typecheck's scope). ".":
# repo-root-level first-party packages that `make check`'s full-repo ty
# pass also needs to resolve -- tools/, demos/, tests/ are all imported
# as `tools.*`/`demos.*`/`tests.*` (pytest rootdir + tools/health,
# tools/stdlib scripts) but live beside python/, not under it; without
# this, ty's repo-wide pass sees every such import as unresolved-import
# (W3 finding, 2026-07-18) even though `python -m pytest`/`python -m
# tools.health` resolve them fine at runtime (repo root is on sys.path).
root = ["python", "."]

# OCP (the OCCT Python binding, WO-100) ships no type stubs, so every
# `from OCP...` member is unresolved to the checker. These two modules
# are the only direct OCP consumers (import-guarded for toolenv gating);
# silence the unavoidable unresolved-import there, nowhere else.
[[tool.ty.overrides]]
include = [
    "python/regolith/backends/drawings/project.py",
    "python/regolith/backends/three_d/tessellate.py",
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests", "python"]
markers = [
    "kicad: real kicad-cli/pcbnew tests (WO-35 deliverable 5); skipped with a named reason when the tools are unavailable",
]

[tool.coverage.run]
# The real-kicad-cli test tier imports system pcbnew (a dist-packages
# module) and this repo's feldspar dependency is an editable install of
# the sibling ../feldspar repo; with no `omit`, coverage traced both as
# covered "our" files, surfacing TEST005 findings against paths we
# neither own nor may annotate (2026-07-19). Deliberately no `source =`
# restriction: with three sibling top-level dirs (python/demos/tools)
# that share no common package root, coverage's XML writer collapses
# their reported paths onto the first source entry (e.g. demos/run_all.py
# renders as python/run_all.py) -- `omit` alone gets the exclusion without
# that bug.
omit = ["*/dist-packages/*", "*/site-packages/*", "*/feldspar/python/feldspar/*"]
