[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# graphite: the drawing mineral, for the drawing-and-driving surface
# (WO-59, AD-31/D163-D165). Own distribution over the regolith wheel --
# the regolith-ls / editors/vscode precedent keeps the wheel lean.
name = "graphite"
version = "0.1.0"
description = "graphite: the regolith interaction surface (config TUI + local-web GUI)"
requires-python = ">=3.12"
license = { text = "GPL-2.0-only" }
dependencies = [
    "regolith",
    "textual>=0.58",
    "pydantic>=2",
    "typani",
]

[project.scripts]
graphite = "graphite.cli:app"

[tool.uv.sources]
# Editable path dependency onto this repo's wheel (dev convenience, the
# regolith-ls precedent); `make install-graphite` wires this up.
regolith = { path = "../..", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["graphite"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ty>=0.0.57",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
