[package]
name = "regolith-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Contract IR: interfaces, matings, ledgers, budgets, L2 arithmetic (WO-12)"

[lints]
workspace = true

[dependencies]
regolith-util = { path = "../regolith-util" }
regolith-diag = { path = "../regolith-diag" }
regolith-qty = { path = "../regolith-qty" }
regolith-syntax = { path = "../regolith-syntax" }
regolith-sem = { path = "../regolith-sem" }
rowan.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
num-rational.workspace = true
camino.workspace = true
