[package]
name = "regolith-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Contract IR: interfaces, matings, ledgers, budgets, L2 arithmetic (WO-12)"

[lints]
workspace = true

[dependencies]
regolith-util = { path = "../regolith-util" }
regolith-diag = { path = "../regolith-diag" }
regolith-qty = { path = "../regolith-qty" }
regolith-syntax = { path = "../regolith-syntax" }
regolith-sem = { path = "../regolith-sem" }
rowan.workspace = true
serde.workspace = true
schemars.workspace = true
tracing.workspace = true
faer = { workspace = true, optional = true }

[features]
# WO-23: the L2 numeric solves (rigid statics, stiffness network,
# sketch residual closure). On by default in the wheel (AD-1); a
# pure-Rust consumer that wants the contract IR without pulling in
# `faer` can build with `--no-default-features`.
default = ["solve"]
solve = ["dep:faer"]

[dev-dependencies]
serde_json.workspace = true
num-rational.workspace = true
camino.workspace = true
# WO-51: walk-promotion snapshot tests over the corpus profiles.
insta.workspace = true
