[package]
name = "regolith-lower"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pass-pipeline driver: AST -> entity DB -> contract IR -> obligations -> static discharge (WO-19, AD-17)"

[lints]
workspace = true

[dependencies]
regolith-util = { path = "../regolith-util" }
regolith-diag = { path = "../regolith-diag" }
regolith-qty = { path = "../regolith-qty" }
regolith-syntax = { path = "../regolith-syntax" }
regolith-sem = { path = "../regolith-sem" }
# `solve` named explicitly (not just via default): the WO-23 statics
# feed and stiffness discharge tier are unconditional in this crate.
regolith-ir = { path = "../regolith-ir", features = ["solve"] }
regolith-oblig = { path = "../regolith-oblig" }
camino.workspace = true
# WO-32 D4b: `LowerOutput.flownets` is an ordered (insertion = source
# order, AD-6) name -> payload map, mirroring `BuildPayload`'s own use
# of `IndexMap` for the same determinism reason.
indexmap.workspace = true
# The fluorite fluid pass (WO-31) reads endpoint tokens off `flownet`
# CST nodes; `rowan::NodeOrToken::into_token` is the token projection.
rowan.workspace = true
ryu.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
