[package]
name = "regolith-oblig"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Obligation/evidence/lockfile schemas, canonical encoding, content addressing, schemars export (WO-13)"

[lints]
workspace = true

[dependencies]
regolith-util = { path = "../regolith-util" }
regolith-diag = { path = "../regolith-diag" }
regolith-qty = { path = "../regolith-qty" }
regolith-ir = { path = "../regolith-ir" }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
indexmap.workspace = true

[dev-dependencies]
