[package]
name = "regolith-qty"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Quantity core: dimensions, units, intervals, log views, value sources (WO-02/03/04)"

[lints]
workspace = true

[dependencies]
regolith-util = { path = "../regolith-util" }
num-rational.workspace = true
serde.workspace = true
thiserror.workspace = true
ryu.workspace = true
schemars.workspace = true

[dev-dependencies]
serde_json.workspace = true
proptest.workspace = true
