[package]
name = "regolith-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Lexer, layout pass, rowan CST, parser, AST views, formatter, extension registry (WO-05)"

[lints]
workspace = true

[dependencies]
regolith-util = { path = "../regolith-util" }
regolith-diag = { path = "../regolith-diag" }
regolith-qty = { path = "../regolith-qty" }
logos.workspace = true
rowan.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
criterion.workspace = true

# Criterion benches over the Kestrel corpus (AD-11); `make bench`.
[[bench]]
name = "parse"
harness = false

# WO-39 deliverable 1: the ONE table export the editor grammars build
# from (`editors/vscode/scripts/gen-grammar.mjs` invokes this binary).
[[bin]]
name = "grammar-json"
path = "src/bin/grammar_json.rs"
