[package]
name = "rockhead-lower"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pass-pipeline driver: AST -> entity DB -> contract IR -> obligations -> static discharge (WO-19, AD-17)"

[lints]
workspace = true

[dependencies]
rockhead-util = { path = "../rockhead-util" }
rockhead-diag = { path = "../rockhead-diag" }
rockhead-qty = { path = "../rockhead-qty" }
rockhead-syntax = { path = "../rockhead-syntax" }
rockhead-sem = { path = "../rockhead-sem" }
rockhead-ir = { path = "../rockhead-ir" }
rockhead-oblig = { path = "../rockhead-oblig" }
camino.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
