[package]
name = "rockhead-oblig"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Obligation/evidence/lockfile schemas, canonical encoding, content addressing, schemars export (WO-13)"

[lints]
workspace = true

[dependencies]
rockhead-util = { path = "../rockhead-util" }
rockhead-diag = { path = "../rockhead-diag" }
rockhead-qty = { path = "../rockhead-qty" }
rockhead-ir = { path = "../rockhead-ir" }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

[dev-dependencies]
