[package]
name = "rockhead-util"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared primitives: ids, interning, blessed deterministic collections, blake3 helpers"

[lints]
workspace = true

[dependencies]
indexmap.workspace = true
blake3.workspace = true
